2008-06-02  Mirco Bauer <meebey@meebey.net> 

	

2008-04-01  Mirco Bauer <meebey@meebey.net> 

	* AssemblyInfo.cs: Bumped version to 0.5.31

2008-01-31  Mirco Bauer <meebey@meebey.net> 

	* AssemblyInfo.cs: Bumped version to 0.5.30.

2007-12-25  Mirco Bauer <meebey@meebey.net> 

	* MainWindow.cs, Frontend.cs, MainWindow.stfl, Entry.cs, ChatViewManager.cs,
	  ChatView.cs: Minor fixes
	* Frontend-STFL.mdp: Updated using MonoDevelop 0.18.1
