@@ -1,3 +1,7 @@
+2008-07-07  Mirco Bauer <meebey@meebey.net> 
+
+	* EngineManager.cs: Using superseded method now.
+
 2008-06-02  Mirco Bauer <meebey@meebey.net> 
 
 	* ChatView.cs, Frontend.mdp: Delete obsolete ChatView.
