@@ -1,3 +1,7 @@
+2008-07-07  Mirco Bauer <meebey@meebey.net> 
+
+	* Frontend.cs: FIxed indention.
+
 2008-06-02  Mirco Bauer <meebey@meebey.net> 
 
 	
